# survis-segmentation-exe

./: CMakeLists.txt  FindTensorRT.cmake  build.md  segmentation.cpp
